--- a/style/style.scss
+++ b/style/style.scss
@@ -3,12 +3,11 @@ body {
   margin: 0;
   padding: 0;
   --maincolor: #050607;
-  --secondcolor: #e8e4d4;
+  --secondcolor: #eceadf;
   --thirdcolor: #dc2121;
 
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -86,7 +85,8 @@ body {
 
 .cursor.animate:after {
   background: var(--secondcolor);
-  animation: cursorAnimation 0.5s ease forwards;
+  -webkit-animation: cursorAnimation 0.5s ease forwards;
+          animation: cursorAnimation 0.5s ease forwards;
   width: 0px;
   height: 0px;
   transform: translate(-50%, -50%);
@@ -99,6 +99,17 @@ body {
 
 }
 
+@-webkit-keyframes cursorAnimationEnd {
+  99% {
+    width: 100px;
+    height: 100px;
+  }
+  100% {
+    width: 10px;
+    height: 10px;
+  }
+}
+
 @keyframes cursorAnimationEnd {
   99% {
     width: 100px;
@@ -107,6 +118,26 @@ body {
   100% {
     width: 10px;
     height: 10px;
+  }
+}
+
+@-webkit-keyframes cursorAnimation {
+  0% {
+    width: 0px;
+    height: 0px;
+    transform: translate(-50%, -50%);
+  }
+
+  99% {
+    width: 102px;
+    height: 102px;
+    transform: translate(-50%, -50%);
+  }
+
+  100% {
+    width: 0px;
+    height: 0px;
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -186,6 +217,12 @@ h5 {
   margin: 0;
 }
 
+@-webkit-keyframes introLine {
+  to {
+    width: 100vw;
+  }
+}
+
 @keyframes introLine {
   to {
     width: 100vw;
@@ -234,9 +271,10 @@ h5 {
           top: 50%;
           left: 50%;
           width: 94vw;
-          transform: translate(-50%, 1000%);
+          transform: translate(-50%, 1100%);
           font-weight: 400;
-          animation: introTitle 1.2s 1s ease forwards;
+          -webkit-animation: introTitle 1.2s 1s ease forwards;
+                  animation: introTitle 1.2s 1s ease forwards;
 
     
     }
@@ -288,7 +326,8 @@ h5 {
       height: 5px;
       transform: translate(-50%, -50%);
       background: var(--secondcolor);
-      animation: introLineAnimation 0.88s ease forwards;
+      -webkit-animation: introLineAnimation 0.88s ease forwards;
+              animation: introLineAnimation 0.88s ease forwards;
 
       h1 {
         transform: translate(-50%, calc(-50% + 60vw));
@@ -367,7 +406,8 @@ h5 {
             top: 300px;
             left: 50%;
             transform: translate(-50%, 0);
-            animation: images 1.2s 1s ease forwards;
+            -webkit-animation: images 1.2s 1s ease forwards;
+                    animation: images 1.2s 1s ease forwards;
         }
       }
 
@@ -403,6 +443,18 @@ h5 {
 
       
 
+      @-webkit-keyframes images {
+        0% {
+          top: 100%;
+        }
+
+        100% {
+          top: 0%;
+        }
+      }
+
+      
+
       @keyframes images {
         0% {
           top: 100%;
@@ -434,19 +486,20 @@ h5 {
 
       .about__content {
         &__title-1 h1 {
-          transform: translate(-50%, 1000%) !important;
+          transform: translate(-50%, 1100%) !important;
           transition: 0.5s;
           
         }
 
         &__title-2 h1 {
-          transform: translate(-50%, 1000%) !important;
+          transform: translate(-50%, 1100%) !important;
           transition: 0.5s;
         }
         
         
         &__title-3 {
-          animation: lineAnimation 1.5s ease forwards;
+          -webkit-animation: lineAnimation 1.5s ease forwards;
+                  animation: lineAnimation 1.5s ease forwards;
 
           h1 {
             transform: translate(-50%, calc(-50%));
@@ -602,7 +655,7 @@ h5 {
 
     @media only screen and (max-width: 996px) {
         &__scroll-line {
-            top: 90vh;
+            top: 85vh;
             width: 1.5px;
     }
 
@@ -613,7 +666,8 @@ h5 {
     overflow: hidden;
     align-items: center;
     justify-items: stretch;
-    column-gap: 1vw;
+    -moz-column-gap: 1vw;
+         column-gap: 1vw;
 
     h5 {
         font-size: calc(4rem + .5vw);
@@ -711,33 +765,61 @@ h5 {
   .about-hovered {
       .about__content__skill__detailed {
           &-1, &-6, &-10, &-14 {
-            animation: skillsAnimation 1.2s 1s ease forwards;
+            -webkit-animation: skillsAnimation 1.2s 1s ease forwards;
+                    animation: skillsAnimation 1.2s 1s ease forwards;
           }
 
           &-2, &-7, &-11, &-15 {
-            animation: skillsAnimation 1.5s 1s ease forwards;
+            -webkit-animation: skillsAnimation 1.5s 1s ease forwards;
+                    animation: skillsAnimation 1.5s 1s ease forwards;
           }
 
           &-3, &-8, &-12, &-16 {
-            animation: skillsAnimation 1.8s 1s ease forwards;
+            -webkit-animation: skillsAnimation 1.8s 1s ease forwards;
+                    animation: skillsAnimation 1.8s 1s ease forwards;
           }
 
           &-4, &-9, &-13, &-17 {
-            animation: skillsAnimation 2.1s 1s ease forwards;
+            -webkit-animation: skillsAnimation 2.1s 1s ease forwards;
+                    animation: skillsAnimation 2.1s 1s ease forwards;
           }
 
           &-5,  &-18 {
-            animation: skillsAnimation 2.4s 1s ease forwards;
+            -webkit-animation: skillsAnimation 2.4s 1s ease forwards;
+                    animation: skillsAnimation 2.4s 1s ease forwards;
           }
       }
   }
 
 }
 
+@-webkit-keyframes introLineAnimation {
+  to {
+    width: 88vw;
+  }
+}
+
 @keyframes introLineAnimation {
   to {
     width: 88vw;
   }
+}
+
+@-webkit-keyframes lineAnimation {
+    0% {
+      width: 88vw;
+      height: 5px;
+    }
+  
+    50% {
+      width: 24vw;
+      height: 5px;
+    }
+  
+    100% {
+      width: 24vw;
+      height: 32vw;
+    }
 }
 
 @keyframes lineAnimation {
@@ -758,6 +840,22 @@ h5 {
 }
 
 @media only screen and (max-width: 996px) {
+    @-webkit-keyframes lineAnimation {
+      0% {
+        width: 88vw;
+        height: 5px;
+      }
+    
+      50% {
+        width: 42vw;
+        height: 5px;
+      }
+    
+      100% {
+        width: 42vw;
+        height: 55vw;
+      }
+    }
     @keyframes lineAnimation {
       0% {
         width: 88vw;
@@ -777,6 +875,22 @@ h5 {
     }
 
 @media only screen and (max-width: 600px) {
+@-webkit-keyframes lineAnimation {
+  0% {
+    width: 88vw;
+    height: 5px;
+  }
+
+  50% {
+    width: 50vw;
+    height: 5px;
+  }
+
+  100% {
+    width: 50vw;
+    height: 70vw;
+  }
+}
 @keyframes lineAnimation {
   0% {
     width: 88vw;
@@ -795,6 +909,16 @@ h5 {
 }
 }
 
+@-webkit-keyframes scrollLine {
+  0% {
+    top: 100vh;
+  }
+
+  100% {
+    top: 65vh;
+  }
+}
+
 @keyframes scrollLine {
   0% {
     top: 100vh;
@@ -802,6 +926,18 @@ h5 {
 
   100% {
     top: 65vh;
+  }
+}
+
+@-webkit-keyframes introCircle {
+  0% {
+    transform: scale(0);
+    box-shadow: inset 0px 0px 0px 0px var(--secondcolor);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: inset 0px 0px 0px 0px var(--secondcolor);
   }
 }
 
@@ -817,6 +953,16 @@ h5 {
   }
 }
 
+@-webkit-keyframes introCircleText {
+  0% {
+    fill: none;
+  }
+
+  100% {
+    fill: var(--secondcolor);
+  }
+}
+
 @keyframes introCircleText {
   0% {
     fill: none;
@@ -824,6 +970,16 @@ h5 {
 
   100% {
     fill: var(--secondcolor);
+  }
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
 
@@ -842,16 +998,18 @@ h5 {
   left: 50%;
   top: 0%;
   width: 0vw;
-  height: 5vh;
+  height: calc(8rem + .5vw);
   transform: translate(-50%, 0);
   background: var(--maincolor);
-  z-index: 2;
-  column-gap: 60vw;
+  z-index: 101;
+  -moz-column-gap: 60vw;
+       column-gap: 60vw;
   visibility: hidden;
   transition: 0.5s;
   visibility: visible;
   transition: 0.5s;
-  animation: introTopSection 1s ease-in-out forwards;
+  -webkit-animation: introTopSection 1s ease-in-out forwards;
+          animation: introTopSection 1s ease-in-out forwards;
 
   &.open {
     height: 100vh !important;
@@ -873,7 +1031,8 @@ h5 {
     opacity: 0;
 
     &.visible {
-      animation: fadeIn 0.3s linear forwards;
+      -webkit-animation: fadeIn 0.3s linear forwards;
+              animation: fadeIn 0.3s linear forwards;
     }
 
     &__icon {
@@ -918,6 +1077,8 @@ h5 {
     justify-items: start;
 
     &__item {
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
       width: fit-content;
       display: grid;
       overflow: hidden;
@@ -954,9 +1115,24 @@ h5 {
   }
 }
 
+@-webkit-keyframes introTopSection {
+  to {
+    width: 100vw;
+  }
+}
+
 @keyframes introTopSection {
   to {
     width: 100vw;
+  }
+}
+
+@-webkit-keyframes introMenu {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -966,6 +1142,16 @@ h5 {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes slideUpMenu {
+  0% {
+    transform: translateY(160px) scale(1, 2.1);
+  }
+
+  100% {
+    transform: translateY(0) scale(1, 2.1);
   }
 }
 
@@ -979,6 +1165,16 @@ h5 {
   }
 }
 
+@-webkit-keyframes slideUp {
+  0% {
+    transform: translate(-50%, calc(-50% + 250px)) scale(1, 1.5);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) scale(1, 1);
+  }
+}
+
 @keyframes slideUp {
   0% {
     transform: translate(-50%, calc(-50% + 250px)) scale(1, 1.5);
@@ -989,9 +1185,24 @@ h5 {
   }
 }
 
+@-webkit-keyframes introTitle {
+  to {
+    transform: translate(-50%, calc(-50%));
+  }
+}
+
 @keyframes introTitle {
   to {
     transform: translate(-50%, calc(-50%));
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -1001,6 +1212,21 @@ h5 {
   }
   100% {
     opacity: 1;
+  }
+}
+
+
+
+
+
+
+@-webkit-keyframes skillsAnimation {
+  0% {
+    transform: translate(0, 300px);
+  }
+
+  100% {
+    transform: translate(0, 0);
   }
 }
 
@@ -1295,6 +1521,8 @@ h5 {
             div {
         margin: 0;
         position: absolute;
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
         width: fit-content;
         overflow: hidden;
 
@@ -1377,7 +1605,7 @@ h5 {
     place-items: center;
     border-top: 2px solid var(--secondcolor);
     overflow: hidden;
-
+    background: var(--maincolor);
 
     h5 {
         font-size: calc(1.3rem + .5vw);
@@ -1399,7 +1627,8 @@ h5 {
         width: calc(1.8rem + .5vw);
         font-size: calc(1.8rem + .5vw);
         display: inline-block;
-        animation: backArrow 1.5s ease-in-out infinite;
+        -webkit-animation: backArrow 1.5s ease-in-out infinite;
+                animation: backArrow 1.5s ease-in-out infinite;
         padding: 0 0 0 0.2vw;
     }
   }
@@ -1446,7 +1675,8 @@ h5 {
 
         svg {
             width: 90%;
-            animation: heartBeating 1.5s ease-in-out infinite both;
+            -webkit-animation: heartBeating 1.5s ease-in-out infinite both;
+                    animation: heartBeating 1.5s ease-in-out infinite both;
         }
 
         path {
@@ -1484,6 +1714,21 @@ h5 {
 
 
 
+@-webkit-keyframes backArrow {
+  0% {
+    transform: translateY(1px);
+  }
+  50% {
+    transform: translateY(-1px);
+  }
+
+  100% {
+    transform: translateY(1px);
+  }
+}
+
+
+
 @keyframes backArrow {
   0% {
     transform: translateY(1px);
@@ -1494,6 +1739,30 @@ h5 {
 
   100% {
     transform: translateY(1px);
+  }
+}
+
+
+
+@-webkit-keyframes heartBeating {
+  0% {
+    width: 90%;
+  }
+
+  10% {
+    width: 80%;
+  }
+
+  17% {
+    width: 85%;
+  }
+
+  33% {
+    width: 75%;
+  }
+
+  45% {
+    width: 90%;
   }
 }
 
