--- a/style/style.scss
+++ b/style/style.scss
@@ -287,7 +287,19 @@ h5 {
         font-size: calc(15rem + .5vw);
 
     }
+    
     }
+
+    @media only screen and (min-device-width: 320px) and (max-device-width: 992px) and (orientation: landscape)  {
+
+      h1 {
+
+      
+      font-size: calc(15rem + .5vw);
+
+  }
+  
+  }
 
 }
 
@@ -372,6 +384,13 @@ h5 {
         }
     }
 
+    @media only screen and (min-device-width: 320px) and (max-device-width: 992px) and (orientation: landscape) {
+      &__title-3 {
+
+        transform: translate(-50%,-50%) scale(.5);
+      }
+    }
+
     @media only screen and (max-width: 600px) { 
         &__title-3 {
           width: 50vw;
@@ -383,6 +402,8 @@ h5 {
           }
         }
     }
+
+    
 
     &__images {
       position: absolute;
@@ -479,6 +500,14 @@ h5 {
             }
     }
     }
+    @media only screen and (min-device-width: 320px) and (max-device-width: 992px) and (orientation: landscape) {
+      &__images {
+
+        transform: translate(-50%,-50%) scale(.5);
+      }
+    }
+
+    
 
     &.about-hovered {
 
@@ -741,6 +770,7 @@ h5 {
     }
     }
 
+
     
 
     @media only screen and (max-width: 600px) {
@@ -750,7 +780,23 @@ h5 {
         }
       }
   }
+  @media only screen and (min-device-width: 320px) and (max-device-width: 992px) and (orientation: landscape) {
 
+    &__skill {
+
+    
+    transform: scale(.5);
+
+    &-1 {
+      top: 10vh;
+    }
+
+    &-2 {
+      top: 53vh;
+    }
+
+  }
+  }
 
 }
 
@@ -1790,3 +1836,69 @@ h5 {
   }
 }
 
+
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+  color: #ffffff;
+  font-size: calc(1rem + .5vw);
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  text-indent: -9999em;
+  transform: translate(-50%,-50%);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+
+.hidden {
+
+
+&.page-container, &.top-section, &.cursor {
+  visibility: hidden;
+}
+
+}
