--- a/style/style.scss
+++ b/style/style.scss
@@ -392,7 +392,8 @@ h5 {
 
       &__img {
         width: calc(21rem + 0.5vw);
-        height: calc(29rem + 0.5vw);
+        height: auto;
+        aspect-ratio: 0.75;
         position: absolute;
         overflow: hidden;
 
@@ -1271,16 +1272,28 @@ h5 {
 
 
 
-  @media only screen and (max-width: 1200px) {
+  @media only screen and (max-width: 1200px) and (min-width: 996px) {
     
     img {
       height: 80%;
+      width: auto;
     }
   }
+
+  
+  @media only screen and (max-width: 996px) {
+    
+    img {
+      height: 30%;
+      width: auto;
+    }
+  }
+
 
   @media only screen and (min-width: 1200px) {
     img {
       height: 90%;
+      width: auto;
     }
   }
 
@@ -1336,31 +1349,15 @@ h5 {
         right: 0vw;
         top: 45%;
 
-
-      }
-    }
-
-    &-3 {
-      top: 60vh;
-
-      .projects__project__img-1 {
-        width: 45vw;
-        height: 80vh;
-        left: 0vw;
-        top: 40%;
-
-
-      }
-      .projects__project__img-2 {
-        width: 50vw;
-        height: 60vh;
-        right: 0vw;
-        top: 50%;
-
+        img {
+          float: right;
+        }
 
 
       }
     }
+
+
 
     &__img {
       position: absolute;
